<resources>
    <string name="app_name">AndroidCourse</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="place_and_date">Tijuana, Baja California a 22 de Enero del 2019</string>
    <string name="datetime">18:45</string>
    <string name="title_activity_contact">ContactActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
</resources>
